first complete draft of paysim pt 2